# todo_finder

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.ci/: common.sh  test_lint.sh
.github/workflows/: push.yaml
crates/todo_finder/: Cargo.toml
crates/todo_finder/src/: main.rs
crates/todo_finder_lib/: Cargo.toml
crates/todo_finder_lib/src/: finder.rs  github.rs  lib.rs  parser.rs  utils.rs
crates/todo_finder_lib/src/finder/: parse.rs  rg.rs
crates/todo_finder_lib/src/parser/: issue.rs  langs.rs  source.rs
crates/todo_finder_lib/test_data/: one.rs
todo_cli/: Cargo.toml
todo_cli/src/: main.rs
todo_finder/: Cargo.toml
todo_finder/src/: main.rs
todo_finder_lib/: Cargo.toml
todo_finder_lib/src/: finder.rs  github.rs  lib.rs  parser.rs
todo_finder_lib/src/finder/: parse.rs  rg.rs
todo_finder_lib/src/parser/: issue.rs  langs.rs  source.rs
todo_finder_lib/test_data/: one.rs  two.rs
todo_lib/: Cargo.toml
todo_lib/src/: finder.rs  github.rs
todo_lib/src/finder/: rg.rs
todo_lib/test_data/: three.rs
