[workspace]
members = [
  "crates/todo_finder_lib",
  "crates/todo_finder",
]

resolver = "2"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
hyper = "1.7"
hyper-tls = "0.6"
nom = "8.0"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
todo_finder_lib = { version = "^0.1", path = "crates/todo_finder_lib" }
tokio = { version = "1.48", features = ["full"] }
