[workspace]
members = [
  "crates/todo_finder_lib",
  "crates/todo_finder",
]

resolver = "2"

[workspace.dependencies]
async-channel = "2.5.0"
clap = { version = "4.5", features = ["derive"] }
console = "0.16.1"
env_logger = "0.11"
futures = "0.3.31"
indicatif = "0.18.0"
log = "0.4"
nom = "8.0"
octocrab = { version = "0.47.0", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.8.9"
todo_finder_lib = { version = "^0.1", path = "crates/todo_finder_lib" }
tokio = { version = "1.48", features = ["full"] }
