[package]
name = "todo_finder_lib"
version = "0.1.1"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library for finding and parsing TODOs, used by todo_finder"
documentation = "https://docs.rs/todo_finder_lib/"
repository = "https://github.com/schell/todo_finder"
readme = "../README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
hyper-tls = "0.4"
nom = "^7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
