[package]
name = "todo_finder"
version = "0.1.2"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"
license = "MIT"
description = "An executable for finding and parsing TODOs"
documentation = "https://docs.rs/todo_finder/"
repository = "https://github.com/schell/todo_finder"
readme = "../../README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hyper = "0.13"
hyper-tls = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.11"
todo_finder_lib = { version = "^0.1", path = "../todo_finder_lib" }
tokio = { version = "0.2", features = ["full"] }
