[package]
name = "todo_finder"
version = "0.1.2"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"
license = "MIT"
description = "An executable for finding and parsing TODOs"
documentation = "https://docs.rs/todo_finder/"
repository = "https://github.com/schell/todo_finder"
readme = "../../README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel.workspace = true
clap.workspace = true
console.workspace = true
env_logger.workspace = true
futures.workspace = true
indicatif.workspace = true
log.workspace = true
octocrab.workspace = true
serde.workspace = true
serde_json.workspace = true
todo_finder_lib.workspace = true
tokio.workspace = true
