[package]
name = "todo_finder_lib"
version = "0.1.1"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library for finding and parsing TODOs, used by todo_finder"
documentation = "https://docs.rs/todo_finder_lib/"
repository = "https://github.com/schell/todo_finder"
readme = "../README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel.workspace = true
futures.workspace = true
log.workspace = true
nom.workspace = true
octocrab.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
